--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
   },
   "homepage": "https://github.com/guilhermebkel/Julius-Caesar-Cryptography#readme",
   "dependencies": {
+    "assert": "^2.0.0",
     "dot-env": "0.0.1",
     "dotenv": "^8.0.0",
+    "mocha": "^6.2.0",
     "node-fetch": "^2.6.0",
     "nodemon": "^1.19.1"
   }
